--- a/css/styles.css
+++ b/css/styles.css
@@ -202,7 +202,6 @@ section h2 {
 
 section.success {
     color: #555;
-    background: #f2f2f2;
 }
 
 @media(max-width:767px) {
@@ -495,6 +494,10 @@ footer .footer-below {
 
 .normal-link {
     font-style: italic;
+}
+
+#skills {
+    background-color: #f2f2f2;
 }
 
 .skill-item {
